Changed individuals age to duration type